--- a/game/package.json
+++ b/game/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "eslint --fix & prettier --write './**/*.{js,jsx,ts,tsx,css,md,json,vue}' --config ./.prettierrc"
   },
   "dependencies": {
     "vue": "^3.2.33"
