--- a/client/game/package.json
+++ b/client/game/package.json
@@ -1,6 +1,7 @@
 {
   "name": "game",
   "version": "0.0.0",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
