--- a/client/game/package.json
+++ b/client/game/package.json
@@ -10,6 +10,7 @@
     "format": "eslint --fix & prettier --write './**/*.{js,jsx,ts,tsx,css,md,json,vue}' --config ./.prettierrc"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "tailwind": "^4.0.0",
     "vue": "^3.2.33"
   },
