--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
-  },
-  "devDependencies": {
+    "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
 }
