--- a/client/game/package.json
+++ b/client/game/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
+    "daisyui": "^2.24.0",
     "tailwind": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
