--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ client/game/node_modules
 client/game/.vscode
 server/node_modules
 server/.env
+client/front-office/src/output.css
+client/game/src/output.css
