--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -13,7 +13,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
     "daisyui": "^2.24.0",
     "framer-motion": "^7.3.6",
     "js-cookie": "^3.0.1",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "tailwindcss": "^3.1.8",
+    "vue": "^2.7.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
