--- a/client/game/package.json
+++ b/client/game/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@tailwindcss/typography": "^0.5.7",
     "bootstrap": "^5.2.0",
     "daisyui": "^2.24.0",
     "tailwind": "^4.0.0",
