--- a/client/game/package.json
+++ b/client/game/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
+    "@heroicons/vue": "^2.0.12",
     "bootstrap": "^5.2.0",
     "daisyui": "^2.24.0",
     "tailwind": "^4.0.0",
