--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -23,7 +23,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-uploader": "^2.1.0",
     "tailwindcss": "^3.1.8",
+    "uploader": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
