feat/barra laterale in profile, serve per vedere anche i pet, non funziona la lettura, ma i collegamenti si

--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.5.4",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "react-icons": "^4.6.0"
   }
 }
