--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -24,7 +24,6 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-uploader": "^2.1.0",
-    "tailwindcss": "^3.1.8",
     "uploader": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
