feat/one command to run all

--- a/client/game/package.json
+++ b/client/game/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "all": "(cd ../../server && npm start) & (cd ../front-office && npm start) & npm start"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
