--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -4,10 +4,11 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@chakra-ui/card": "^2.1.1",
     "@chakra-ui/icons": "^2.0.10",
-    "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^2.0.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -16,7 +17,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
     "daisyui": "^2.24.0",
-    "framer-motion": "^7.3.6",
+    "framer-motion": "^7.6.7",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,8 +27,8 @@
     "react-slick": "^0.29.0",
     "react-uploader": "^2.1.0",
     "tailwindcss": "^3.1.8",
-    "vue": "^2.7.13",
     "uploader": "^2.2.2",
+    "vue": "^2.7.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
