--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -29,6 +29,7 @@
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-slick": "^0.29.0",
     "react-uploader": "^2.1.0",
     "uploader": "^2.2.2",
