--- a/client/front-office/package.json
+++ b/client/front-office/package.json
@@ -1,7 +1,6 @@
 {
   "name": "front-office",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@chakra-ui/card": "^2.1.1",
@@ -33,7 +32,6 @@
     "react-slick": "^0.29.0",
     "react-uploader": "^2.1.0",
     "uploader": "^2.2.2",
-    "vue": "^2.7.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "/f/",
   "eslintConfig": {
     "extends": [
       "react-app",
