--- a/client/game/package.json
+++ b/client/game/package.json
@@ -1,10 +1,11 @@
 {
   "name": "game",
   "version": "0.0.0",
+  "proxy":"http://localhost:5000/g",
   "scripts": {
     "start": "vite --host",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/g",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "all": "(cd ../../server && npm start) & (cd ../front-office && npm start) & npm start"
