--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,5 @@ services:
     depends_on:
       - mongo
     environment:
-      DB_CONNECTION: mongodb://localhost:27017
+      DB_CONNECTION: mongodb://mongo:27017
+      TOKEN_SECRET: mg5jPnOLUuUhaBr
