--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,5 @@ services:
       - mongo
     environment:
       DB_CONNECTION: mongodb://mongo:27017
+      PORT: 5000
       TOKEN_SECRET: mg5jPnOLUuUhaBr
